--- a/about.html
+++ b/about.html
@@ -4,8 +4,12 @@
     <title>About</title>
     <meta name="charset" content="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="./Assets/Icon/icon.jpg"
-<!--Loading Files need for this page-->
+    <link rel="icon" href="./Assets/Icon/icon.jpg">
+    <meta name="title" content="About">
+    <meta name="description" content="About Maputo International Collage Classroom">
+    <meta name="author" content="Maputo International Collage Student">
+    <meta name="keywords" content="MIC Classroom, Maputo International Collage Classroom">
+    <!--Loading Files need for this page-->
 </head>
 <body>
 </body>
