--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">    
     <link rel="icon" href="./Assets/Icon/icon.jpg" type="image/jpg">
     <meta content="title" content="Home Page">
-    <meta name="description" content="Maputo International Collage Private Classroom">
-    <meta content="author" content="Maputo International Collage">
+    <meta name="description" content="Maputo International Collage Classroom">
+    <meta content="author" content="Maputo International Collage Student">
     <meta content="keywords" content="MIC Classroom, Maputo International Collage Classroom">
 <!--Load Files need for this page-->
     <script src="./Js/home.js"  ></script>
     <link rel="stylesheet" href="./Css/home.css" type="text/css">
+    <link rel="stylesheet" href="./Css/Auto/detect-mode.css">
 </head>
 <body>
 <p>Welcome to Maputo International Collage Classroom<br>This website is only for Maputo International Collage Students<br>Want to know more about this website <a href="about.html">click here.</a></p>
