--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
     <link rel="stylesheet" href="./Css/Auto/detect-mode.css">
 </head>
 <body>
+<noscript>
+Oh No! You disable javascript access<br>Don`t know how to enable javascript? <a href="./how-to/enable-javascipt.html">Click here</a>
+<style type="text/css">
+        #main-content { display: none;}
+</style>
+</noscript>
+<div id="main-content">
 <p>Welcome to Maputo International Collage Classroom<br>This website is only for Maputo International Collage Students<br>Want to know more about this website <a href="about.html">click here.</a></p>
+</div>
 </body>
 </html>
