--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
     <meta name="description" content="Maputo International Collage Classroom">
     <meta content="author" content="Maputo International Collage Student">
     <meta content="keywords" content="MIC Classroom, Maputo International Collage Classroom">
-<!--Load Files need for this page-->
+    <!-- Load local javascript file to the page -->
     <script src="./Js/home.js"  ></script>
-    <link rel="stylesheet" href="./Css/home.css" type="text/css">
-    <link rel="stylesheet" href="./Css/Auto/detect-mode.css">
+    <!-- Local style sheet files to the page -->
+    <link rel="stylesheet" type="text/css" href="./Css/home.css">
+    <link rel="stylesheet" type="text/css" href="./Css/Auto/detect-mode.css">
+    <link rel="stylesheet" type="text/css" href="./Css/Auto/disabled.css">
+    <link rel="stylesheet" type="text/css" href="./Css/Auto/style.css">
 </head>
 <body>
+<!-- If the browser javascript is disable shows this on the top -->
 <noscript>
-Oh No! You disable javascript access<br>Don`t know how to enable javascript? <a href="./how-to/enable-javascipt.html">Click here</a>
-<style type="text/css">
-        #main-content { display: none;}
+<p id="disable-js">
+Enable Javascript in your browser of better experience. <a href="./how-to/enable-javascipt.html">Here is how.</a>
+</p>
 </style>
 </noscript>
-<div id="main-content">
 <p>Welcome to Maputo International Collage Classroom<br>This website is only for Maputo International Collage Students<br>Want to know more about this website <a href="about.html">click here.</a></p>
-</div>
 </body>
 </html>
