--- a/about.html
+++ b/about.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About</title>
+    <title>About Maputo International Collage Classroom</title>
     <meta name="charset" content="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="./Assets/Icon/icon.jpg">
-    <meta name="title" content="About">
+    <meta name="title" content="About Maputo International Collage Classroom">
     <meta name="description" content="About Maputo International Collage Classroom">
     <meta name="author" content="Maputo International Collage Student">
     <meta name="keywords" content="MIC Classroom, Maputo International Collage Classroom">
-    <!--Loading Files need for this page-->
+    <!-- Load local javascript file to the page -->
+    <script src="./Js/about.js"  ></script>
+    <!-- Local style sheet files to the page -->
+    <link rel="stylesheet" type="text/css" href="./Css/about.css">
+    <link rel="stylesheet" type="text/css" href="./Css/Auto/detect-mode.css">
+    <link rel="stylesheet" type="text/css" href="./Css/Auto/disabled.css">
+    <link rel="stylesheet" type="text/css" href="./Css/Auto/style.css">
 </head>
 <body>
 </body>
